--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,7 @@ LOG_BACKUP_COUNT=5
 OPENAI_API_KEY=replace_with_your_openai_key
 OPENAI_MODEL=gpt-3.5-turbo
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+OPENAI_PDF_READER_MODEL=gpt-3.5-turbo
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=1000
 OPENAI_CACHE_RESULTS=True
