--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [tool.black]
 line-length = 120
-target-version = ['py39']
+target-version = ["py310"]
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -26,3 +30,56 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 skip_gitignore = true
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+namespace_packages = true
+explicit_package_bases = true
+mypy_path = ["src"]
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+
+[[tool.mypy.overrides]]
+module = "ai_book_seeker.*"
+ignore_missing_imports = true
+
+[project]
+name = "ai_book_seeker"
+version = "0.1.0"
+description = "An AI-powered book recommendation system"
+authors = [
+    { name = "AI Book Seeker Team" }
+]
+readme = "README.md"
+requires-python = ">=3.10"
+license = { text = "MIT" }
+
+[project.dependencies]
+fastapi = ">=0.103.1"
+openai = ">=0.27.0"
+chromadb = ">=0.4.15"
+sqlalchemy = ">=2.0.19"
+pydantic = ">=2.3.0"
+python-dotenv = ">=1.0.0"
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.0",
+    "black>=23.7.0",
+    "flake8>=6.1.0",
+    "isort>=5.12.0",
+    "mypy>=1.5.1",
+    "types-setuptools>=57.4.0",
+]
+
+[tool.setuptools]
+packages = ["find_namespace:"]
+package-dir = {"": "src"}
+include-package-data = true
