--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-# Production dependencies
+# Production dependencies for AI Book Seeker
 fastapi==0.115.9
 uvicorn==0.34.1
 pydantic==2.11.3
@@ -11,18 +11,15 @@ sqlalchemy==2.0.40
 tiktoken==0.9.0
 numpy==2.2.4
 typing-extensions==4.13.2
-httpx==0.28.1
 alembic==1.15.2
 anyio==4.9.0
 starlette==0.45.0
 watchfiles==1.0.5
-
-# Development dependencies
-black==25.1.0
-flake8==7.2.0
-isort==6.0.1
-pytest==8.3.5
-pytest-cov==6.1.1
-pytest-asyncio==0.26.0
-mypy==1.15.0
-pylint==3.3.6
+PyPDF2==3.0.1
+pytesseract==0.3.13
+pillow==11.2.1
+crewai==0.117.1
+pdf2image==1.17.0
+langchain==0.3.24
+langchain-openai==0.3.14
+python-multipart==0.0.20
