add feature voice assistant

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,7 +32,7 @@ ensure_newline_before_comments = true
 skip_gitignore = true
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
@@ -54,32 +54,59 @@ ignore_missing_imports = true
 name = "ai_book_seeker"
 version = "0.1.0"
 description = "An AI-powered book recommendation system"
-authors = [
-    { name = "AI Book Seeker Team" }
-]
+authors = [{ name = "AI Book Seeker Team" }]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "==3.11.9"
 license = { text = "MIT" }
 
-[project.dependencies]
-fastapi = ">=0.103.1"
-openai = ">=0.27.0"
-chromadb = ">=0.4.15"
-sqlalchemy = ">=2.0.19"
-pydantic = ">=2.3.0"
-python-dotenv = ">=1.0.0"
+dependencies = [
+    "fastapi==0.115.9",
+    "uvicorn==0.34.1",
+    "pydantic==2.11.3",
+    "openai==1.75.0",
+    "python-dotenv==1.1.0",
+    "mysql-connector-python==9.3.0",
+    "redis==5.2.1",
+    "sqlalchemy==2.0.40",
+    "tiktoken==0.9.0",
+    "numpy<2",
+    "typing-extensions==4.13.2",
+    "alembic==1.15.2",
+    "anyio==4.9.0",
+    "starlette==0.45.0",
+    "watchfiles==1.0.5",
+    "PyPDF2==3.0.1",
+    "pytesseract==0.3.13",
+    "pillow==11.2.1",
+    "crewai==0.117.1",
+    "pdf2image==1.17.0",
+    "langchain==0.3.26",
+    "langchain-openai==0.3.14",
+    "python-multipart==0.0.20",
+    "pytest>=8.3.5",
+    "langchain-chroma>=0.2.4",
+    "pytest-asyncio>=0.26.0",
+    "pytest-mock>=3.14.1",
+    "python-json-logger>=3.3.0",
+    "langsmith>=0.3.45",
+]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.4.0",
-    "black>=23.7.0",
-    "flake8>=6.1.0",
-    "isort>=5.12.0",
-    "mypy>=1.5.1",
+    "pytest==8.3.5",
+    "black==25.1.0",
+    "flake8==7.2.0",
+    "isort==6.0.1",
+    "mypy==1.15.0",
     "types-setuptools>=57.4.0",
+    "pytest-cov==6.1.1",
+    "pytest-asyncio==0.26.0",
+    "pylint==3.3.6",
+    "types-requests>=2.31.0",
+    "types-PyYAML>=6.0.12"
 ]
 
 [tool.setuptools]
-packages = ["find_namespace:"]
-package-dir = {"": "src"}
+packages = { find = { where = ["src"] } }
+package-dir = { "" = "src" }
 include-package-data = true
