--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,7 +14,7 @@ LOG_BACKUP_COUNT=5
 
 # OpenAI
 OPENAI_API_KEY=replace_with_your_openai_key
-OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_MODEL=gpt-4o
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 OPENAI_PDF_READER_MODEL=gpt-3.5-turbo
 OPENAI_TEMPERATURE=0.7
@@ -50,3 +50,6 @@ SEARCHER_VERSION=v1
 EXPLAINER_VERSION=v1
 EXPLANATION_PROMPT_VERSION=v1
 SYSTEM_PROMPT_VERSION=v1
+
+# ElevenLabs
+ELEVENLABS_WEBHOOK_SECRET=
