Refactor to use LangGraph

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,17 +25,21 @@ OPENAI_MAX_TOKENS_CONTEXT=3000
 OPENAI_BATCH_SIZE=5
 
 # Vector DB Settings
-SKIP_VECTOR_INIT=False  # Set to True to skip embedding creation on startup
-CHROMA_PERSIST_DIRECTORY=./chromadb_data
-CHROMA_COLLECTION_NAME=book_embeddings
+STARTUP_SKIP_VECTOR_INIT=False  # Set to True to skip embedding creation on startup
+CHROMADB_BOOK_PERSIST_DIRECTORY=./chromadb_books
+CHROMADB_BOOK_COLLECTION_NAME=books_collection
+
+CHROMADB_FAQ_PERSIST_DIRECTORY=./chromadb_faq
+CHROMADB_FAQ_COLLECTION_NAME=fqa_collection
 
 # Database - MySQL
-MYSQL_USER=db_user
-MYSQL_PASSWORD=db_password
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_DATABASE=ai_book_seeker
-MYSQL_CONNECTION_STRING=mysql+mysqlconnector://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
+DB_USERNAME=db_user
+DB_PASSWORD=db_password
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=ai_book_seeker
+DB_URL=mysql+mysqlconnector://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}
+DB_ECHO_SQL=true
 
 # Redis - For session management
 REDIS_HOST=localhost
@@ -46,10 +50,9 @@ REDIS_EXPIRE_SECONDS=7200  # 2 hours
 REDIS_MAX_TURNS_TO_STORE=10
 
 # Prompt versions - for versioned prompts
-SEARCHER_VERSION=v1
-EXPLAINER_VERSION=v1
-EXPLANATION_PROMPT_VERSION=v1
-SYSTEM_PROMPT_VERSION=v1
+PROMPT_SEARCHER_VERSION=v1
+PROMPT_SYSTEM_PROMPT_VERSION=v1
+PROMPT_EXPLAINER_VERSION=v1
 
 # ElevenLabs
-ELEVENLABS_WEBHOOK_SECRET=webhook
+X_API_KEY=webhook
