--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -66,7 +66,7 @@ dependencies = [
     "openai==1.75.0",
     "python-dotenv==1.1.0",
     "mysql-connector-python==9.3.0",
-    "redis==5.2.1",
+    "redis==6.2.0",
     "sqlalchemy==2.0.40",
     "tiktoken==0.9.0",
     "numpy<2",
@@ -89,6 +89,14 @@ dependencies = [
     "pytest-mock>=3.14.1",
     "python-json-logger>=3.3.0",
     "langsmith>=0.3.45",
+    "langgraph>=0.5.3",
+    "langgraph-checkpoint-redis>=0.0.8",
+    "pydantic-settings>=2.10.1",
+    "mysqlclient>=2.2.7",
+    "pymysql>=1.1.1",
+    "aiofiles>=24.1.0",
+    "rapidfuzz>=3.13.0",
+    "redisvl>=0.8.0",
 ]
 
 [project.optional-dependencies]
