--- a/.gitignore
+++ b/.gitignore
@@ -114,9 +114,12 @@ settings.json
 # Node modules
 node_modules/
 
+**/metadata_extraction/outputs
+
 # ChromaDB data
 **/chromadb_data/
 **/chromadb_faq
+**/backend/chromadb_books
 
 # Next.js build output
 frontend/.next/
