--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,11 +6,26 @@ ENVIRONMENT=development
 API_HOST=0.0.0.0
 API_PORT=8000
 DEBUG=True
-LOG_LEVEL=INFO
-LOG_DIR=logs
-LOG_FILENAME=ai-book-seeker.log
-MAX_LOG_SIZE=5242880
-LOG_BACKUP_COUNT=5
+
+# =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+
+# Enable file logging
+LOGGING_ENABLE_FILE_LOGGING=true
+LOGGING_LOG_DIRECTORY=./logs
+LOGGING_LOG_FILENAME=ai_book_seeker.log
+LOGGING_ERROR_LOG_FILENAME=ai_book_seeker_error.log
+
+# Log rotation settings
+LOGGING_MAX_FILE_SIZE_MB=10
+LOGGING_BACKUP_COUNT=5
+
+# Console logging
+LOGGING_ENABLE_CONSOLE_LOGGING=true
+
+# Log level (INFO, DEBUG, WARNING, ERROR)
+LOGGING_LEVEL=INFO
 
 # OpenAI
 OPENAI_API_KEY=replace_with_your_openai_key
